# cpp-implementations

./: .gitignore  README.md
hello-epoll/: Makefile  hello-epoll  hello-epoll.cpp
subscriber-notifs/: CMakeLists.txt  problem.md
subscriber-notifs-async/: CMakeLists.txt  problem.md
subscriber-notifs-async/include/app/: inventory_manager.hpp
subscriber-notifs-async/include/core/: subscribable.hpp  subscriber.hpp  thread_pool.hpp
subscriber-notifs-async/src/: main.cpp
subscriber-notifs-async/src/app/: inventory_manager.cpp  services.cpp
subscriber-notifs-async/src/core/: thread_pool.cpp
subscriber-notifs/include/app/: inventory_manager.hpp  services.hpp
subscriber-notifs/include/core/: subscribable.hpp
subscriber-notifs/src/: main.cpp
subscriber-notifs/src/app/: inventory_manager.cpp  services.cpp
thread-pool/: pool.cpp
